--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -7,4 +7,5 @@
 
 // @import './section2';
 // @import './section3';
-@import './section4_1_bar';
+// @import './section4_1_bar';
+@import './section4_2_scatter';
