Add animations and transitions

--- a/src/scss/_section4_2_scatter.scss
+++ b/src/scss/_section4_2_scatter.scss
@@ -29,3 +29,14 @@
     font-size: 12px
 }
 
+#button {
+    cursor: pointer;
+    height: 30px;
+    width: 100px;
+    margin: 25px auto;
+    background-color: grey;
+    border-radius: 2px;
+    color: white;
+    text-align: center;
+    padding-top: 6px;
+}
