Started geo charts

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,4 +8,5 @@
 // @import './section2';
 // @import './section3';
 // @import './section4_1_bar';
-@import './section4_2_scatter';
+// @import './section4_2_scatter';
+@import './section7'
